<?xml version="1.0"?>
<package>
  <name>murdoch_rta_msgs</name>
  <version>1.0.0</version>
  <description>MurdochRTA Messages: A package containing the messages definied for the murdoch_rta package</description>

  <maintainer email="caueguidotti@unifei.edu.br">Caue Franco Guidotti</maintainer>
  <author email="caueguidotti@unifei.edu.br">Caue Franco Guidotti</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
